# Compilers

lab0/: main.py
lab1.2/: main.go  program.txt
lab1.3/: CMakeLists.txt  main.cpp  program.txt
lab1.3/include/: compiler.h  fragment.h  message.h  position.h  scanner.h  token.h
lab1.3/src/: compiler.cpp  position.cpp  scanner.cpp
lab1.4/: automata.txt  main.go  program.txt
lab1.5/: CMakeLists.txt  main.l  program.txt  run.sh
lab2.1/: ast_test.go  ast_test.txt  ast_test_new.go  astprint.go
lab2.2/examples/: program.txt  tree.txt
lab2.2/sample/: main.py
lab2.2/specs/: abstract_grammar.txt  concrete_grammar.txt
lab2.3/: CMakeLists.txt  main.cpp
lab2.3/include/: message.h  node.h  parser.h  position.h  scanner.h  token.h
lab2.3/output/: tree.txt
lab2.3/specs/: table.txt
lab2.3/src/: node.cpp  parser.cpp  position.cpp  scanner.cpp
lab2.4/: CMakeLists.txt  main.cpp  run.sh
lab2.4/docs/: abstract_grammar.txt  concrete_grammar.txt  lexical_structure  rbnf.txt
lab2.4/example/: program.txt
lab2.4/include/: compiler.h  fragment.h  node.h  parser.h  token.h
lab2.4/output/: ast.json
lab2.4/src/: compiler.cpp  node.cpp  parser.cpp  scanner.cpp
lab3.1/calculator/: main.cpp
lab3.1/calculator/example/: program.txt
lab3.1/generator/: CMakeLists.txt  main.cpp
lab3.1/generator/output/: tree.txt
lab3.1/generator/self_table/: analyzer_table.cpp
lab3.2/: grammar.txt  input.txt  lexer.h  lexer.l  output.txt  parser.y  run.sh
lab3.2_v2/: input.txt
lab3.3/examples/: program.txt
lab3.3/sample/: main.py
lab3.3/specs/: concrete_grammar.txt
(+30 files in other folders)
